--- a/styles/style.css
+++ b/styles/style.css
@@ -424,7 +424,8 @@ header {
 
 
 p{
-    color: var(--text-color) !important; 
+    color: rgb(255, 255, 255) !important; 
+    font-size: 1.1rem !important;
 }
 
 img {
